# ssas

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/qtep/: CMakeLists.txt
lib/qtep/src/: CMakeLists.txt  qtep.h
lib/qtep/src/core/: project.cpp  project.h  projectitem.cpp  projectitem.h
lib/qtep/src/gui/: action.cpp  action.h  actionmanager.cpp  actionmanager.h  command.cpp  command.h
src/: CMakeLists.txt  ssas.h
src/core/: edge.cpp  edge.h  element.cpp  element.h  model.cpp  model.h  node.cpp  node.h  surface.cpp  surface.h  treatment.cpp  treatment.h  triangle.cpp  triangle.h
tools/: CMakeLists.txt
tools/ssas_gui/: CMakeLists.txt  application.cpp  application.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  surfaceitem.cpp  surfaceitem.h  surfaceviewitem.cpp  surfaceviewitem.h  view.cpp  view.h  viewitem.cpp  viewitem.h  viewmodel.cpp  viewmodel.h  workspacemodel.cpp  workspacemodel.h  workspacemodelitem.cpp  workspacemodelitem.h
